--- a/src/components/event_limiter/event_limiter.requirements.yaml
+++ b/src/components/event_limiter/event_limiter.requirements.yaml
@@ -1,7 +1,7 @@
 ---
 description: These are the requirements for the Event Limiter component.
 requirements:
-  - text: The Event Limiter component shall accept all events from the system and pass then on if not limited.
+  - text: The Event Limiter component shall accept all events from the system and pass them on if not limited.
   - text: The Event Limiter component shall track the number of each particular event and limit if more than a set persistence, between 1 and 7, is seen in 1 tick.
   - text: The Event Limiter component shall allow one event through each tick if the event is at the limit and still coming through the system.
   - text: The Event Limiter component shall not limit event messages if the event is not set to enabled.
