--- a/src/components/cpu_monitor/cpu_monitor.component.yaml
+++ b/src/components/cpu_monitor/cpu_monitor.component.yaml
@@ -18,7 +18,7 @@ init:
     - name: interrupt_List
       type: Interrupt_Types.Interrupt_Id_List_Access
       not_null: true
-      description: A list of task info records to monitor.
+      description: A list of interrupt ids to monitor.
     - name: execution_Periods
       type: Execution_Periods_Type
       description: The period (in ticks) that specify the duration of time that each CPU measurement is taken over.
@@ -26,7 +26,7 @@ init:
       default: "[1, 6, 30]"
     - name: packet_Period
       type: Interfaces.Unsigned_16
-      description: The period (in ticks) of how often to send out the cpu execution packet. A value of zero disable sending of the packet.
+      description: The period (in ticks) of how often to send out the cpu execution packet. A value of zero disables sending of the packet.
       default: "1"
 connectors:
   - description: This is the base tick for the component.
