--- a/src/components/event_filter/event_filter.events.yaml
+++ b/src/components/event_filter/event_filter.events.yaml
@@ -23,7 +23,7 @@ events:
     description: This event indicates that the command to change the event state to enabled failed since the event ID was out of range.
     param_type: Event_Filter_Single_Event_Cmd_Type.T
   - name: Unfilter_Event_Invalid_Id
-    description: This event indicates that the command to change the event state to disable failed since the event ID was out of range.
+    description: This event indicates that the command to change the event state to disabled failed since the event ID was out of range.
     param_type: Event_Filter_Single_Event_Cmd_Type.T
   - name: Filter_Event_Range_Invalid_Id
     description: This event indicates that changing the state for the range to enabled, failed due to an invalid id.
