--- a/src/components/event_filter/types/event_filter_id_range.record.yaml
+++ b/src/components/event_filter/types/event_filter_id_range.record.yaml
@@ -1,5 +1,5 @@
 ---
-description: This record contains the definition for a two event ID type for ranges in the event limiter commands as well as an issue packet type for issuing packets
+description: This record contains the definition for a two event ID type for ranges in the event filter commands as well as an issue packet type for issuing packets
 fields:
   - name: start_Event_Id
     description: The starting event ID to begin the range
