--- a/src/components/event_limiter/event_limiter.events.yaml
+++ b/src/components/event_limiter/event_limiter.events.yaml
@@ -26,7 +26,7 @@ events:
     description: This event indicates that the command to change the event state to enabled failed since the event ID was out of range.
     param_type: Event_Single_State_Cmd_Type.T
   - name: Event_Limit_Disable_Invalid_Id
-    description: This event indicates that the command to change the event state to disable failed since the event ID was out of range.
+    description: This event indicates that the command to change the event state to disabled failed since the event ID was out of range.
     param_type: Event_Single_State_Cmd_Type.T
   - name: Event_Limit_Range_Enabled_Invalid_Id
     description: This event indicates that changing the state for the range to enabled, failed due to an invalid id.
