Fix copy-paste errors, typos, and comment mismatches in event_limiter, event_packetizer, event_text_logger, and fault_correction
- two_counter_entry.ads: Fix Init parameter comments copy-pasted from
  event_packetizer (described packet count/timeout instead of event ID range)
- two_counter_entry.ads: Fix misleading top-level comment ('statistics
  data structure' -> 'two-counter entry data structure for event limiting')
- event_packetizer_tests-implementation.ads: Fix test comment ('single
  internal packet' -> '3 internal packets' to match YAML)
- event_producer: Fix 'compoonent' typo in component.yaml and .ads
- fault_correction.component.yaml: Fix 'command correction' -> 'command response'
- fault_correction tester .ads: Same 'command correction' fix
- fault_correction.tests.yaml: Fix 'fauls' -> 'fails'

--- a/src/components/event_text_logger/test/event_producer/event_producer.component.yaml
+++ b/src/components/event_text_logger/test/event_producer/event_producer.component.yaml
@@ -1,5 +1,5 @@
 ---
-description: A simple compoonent which produces events for testing the event to text logger component.
+description: A simple component which produces events for testing the event to text logger component.
 execution: passive
 connectors:
   - description: Tick to regulate the execution of the component.
