--- a/src/components/parameter_store/test/parameter_store.tests.yaml
+++ b/src/components/parameter_store/test/parameter_store.tests.yaml
@@ -6,7 +6,7 @@ tests:
   - name: Test_Nominal_Table_Upload
     description: This unit test tests the nominal updating of the parameter table by memory region upload.
   - name: Test_Nominal_Table_Fetch
-    description: This unit test tests the nominal fetching of the parameter table by into a provided memory region.
+    description: This unit test tests the nominal fetching of the parameter table into a provided memory region.
   - name: Test_Table_Upload_Length_Error
     description: This unit test tests the behavior when updating the parameter table with a memory region of invalid length.
   - name: Test_Table_Upload_Crc_Error
