deep-read batch 1: queue_monitor/product_packetizer grammar fixes

--- a/src/components/queue_monitor/gen/templates/assembly/name_queue_monitor_packet_type.record.yaml
+++ b/src/components/queue_monitor/gen/templates/assembly/name_queue_monitor_packet_type.record.yaml
@@ -1,5 +1,5 @@
 ---
-description: This is the autocoded packet type for the Queue Monitor component. It contains queue utilization information for queued component in the assembly.
+description: This is the autocoded packet type for the Queue Monitor component. It contains queue utilization information for each queued component in the assembly.
 fields:
 {% if component_kind_dict["queued"] %}
 {% for component in component_kind_dict["queued"] %}
